--- a/pom.xml
+++ b/pom.xml
@@ -45,28 +45,11 @@
 		</dependency>
 		<dependency>
 			<groupId>telran.spring</groupId>
-			<artifactId>jwt-authentification</artifactId>
+			<artifactId>jwt-authentication</artifactId>
 			<version>0.0.1</version>
 		</dependency>
-		<dependency>
-			<groupId>telran.spring</groupId>
-			<artifactId>web-exceptions-handler</artifactId>
-			<version>0.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>telran.spring</groupId>
-			<artifactId>accounting-management</artifactId>
-			<version>0.0.1</version>
-		</dependency>
+
+
 	</dependencies>
 
 	<build>
