--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-logging.level.telran=debug
+logging.level.telran=trace
+logging.level.employees=trace
 #logging.level.root=error
-app.security.admin.password=${ADMIN_PASSWORD}
+app.security.admin.password=${ADMIN_PASSWORD_EMPLOYEES}
 app.expiration.period=100
-app.security.validation.time.unit:SECONDS
-app.security.validation.period:30000
-app.jwt.signature.secret:${JWT_SECRET}
+app.security.validation.time.unit=SECONDS
+app.security.validation.period=30000
+app.jwt.signature.secret:${JWT_SECRET_EMPLOYEES}
+server.port=3500
