--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 logging.level.telran=trace
 logging.level.employees=trace
 #logging.level.root=error
-app.security.admin.password=${ADMIN_PASSWORD_EMPLOYEES}
-app.expiration.period=100
-app.security.validation.time.unit=SECONDS
-app.security.validation.period=30000
+app.accounts.admin.password=${ADMIN_PASSWORD_EMPLOYEES}
 app.jwt.signature.secret:${JWT_SECRET_EMPLOYEES}
 server.port=3500
