--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ logging.level.telran=trace
 logging.level.employees=trace
 #logging.level.root=error
 app.accounts.admin.password=${ADMIN_PASSWORD_EMPLOYEES}
-app.jwt.signature.secret:${JWT_SECRET_EMPLOYEES}
+app.jwt.signature.secret=${JWT_SECRET_EMPLOYEES}
 server.port=3500
